--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <section class="grid-container">
       <div class="sedans flex">
-        <img src="/images/icon-sedans.svg" alt="" class="sedan-icon icons">
+        <img src="./images/icon-sedans.svg" alt="" class="sedan-icon icons">
         <h2>Sedans</h2>
         <div class="desc">
           Choose a sedan for its affordability and excellent fuel economy. Ideal
@@ -27,7 +27,7 @@
         <a href="#" class="learn-more-sedan">Learn More</a>
       </div>
       <div class="suv flex">
-        <img src="/images/icon-suvs.svg" alt="" class="suv-icon icons">
+        <img src="./images/icon-suvs.svg" alt="" class="suv-icon icons">
         <h2>SUVs</h2>
         <div class="desc">
           Take an SUV for its spacious interior, power, and versatility. Perfect
@@ -36,7 +36,7 @@
         <a href="#" class="learn-more-suv">Learn More</a>
       </div>
       <div class="luxury flex">
-        <img src="/images/icon-luxury.svg" alt="" class="luxury-icon icons">
+        <img src="./images/icon-luxury.svg" alt="" class="luxury-icon icons">
         <h2>Luxury</h2>
         <div class="desc">
           Cruise in the best car brands without the bloated prices. Enjoy the
